# knights

./: .flatpak-manifest.json  .gitattributes  .gitignore  .kde-ci.yml  CMakeLists.txt  ChangeLog  DESIGN  Knights.kdev4  README  README.md  README.themes  README.translation  compile_clang  knights.categories  snapcraft.yaml
cmake/Modules/: FindKdeGames.cmake
data/: CMakeLists.txt  seek.desktop
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
po/ar/: knights.po
po/ast/: knights.po
po/bg/: knights.po
po/bs/: knights.po
po/ca/: knights.po
po/ca/docs/knights/: index.docbook
po/ca@valencia/: knights.po
po/cs/: knights.po
po/da/: knights.po
po/de/: knights.po
po/de/docs/knights/: index.docbook
po/el/: knights.po
po/en_GB/: knights.po
po/eo/: knights.po
po/es/: knights.po
po/es/docs/knights/: index.docbook
po/et/: knights.po
po/et/docs/knights/: index.docbook
po/eu/: knights.po
po/fa/: knights.po
po/fi/: knights.po
po/fr/: knights.po
po/fr/docs/knights/: index.docbook
po/ga/: knights.po
po/gl/: knights.po
po/he/: knights.po
po/hi/: knights.po
po/hu/: knights.po
po/ia/: knights.po
po/id/: knights.po
po/it/: knights.po
po/it/docs/knights/: index.docbook
po/ja/: knights.po
po/ka/: knights.po
po/km/: knights.po
po/ko/: knights.po
po/lt/: knights.po
po/lv/: knights.po
po/ml/: knights.po
po/mr/: knights.po
po/nb/: knights.po
po/nds/: knights.po
po/nl/: knights.po
po/nl/docs/knights/: index.docbook
po/nn/: knights.po
po/pl/: knights.po
po/pt/: knights.po
po/pt/docs/knights/: index.docbook
po/pt_BR/: knights.po
po/pt_BR/docs/knights/: index.docbook
po/ro/: knights.po
po/ru/: knights.po
po/ru/docs/knights/: index.docbook
po/sa/: knights.po
po/sk/: knights.po
po/sl/: knights.po
po/sl/docs/knights/: index.docbook
po/sr/: knights.po
po/sr@ijekavian/: knights.po
po/sr@ijekavianlatin/: knights.po
po/sr@latin/: knights.po
po/sv/: knights.po
po/sv/docs/knights/: index.docbook
po/tr/: knights.po
po/ug/: knights.po
po/uk/: knights.po
po/uk/docs/knights/: index.docbook
po/zh_CN/: knights.po
po/zh_TW/: knights.po
sounds/: CMakeLists.txt  README
src/: CMakeLists.txt  Messages.sh  board.cpp  board.h  chessrules.cpp  chessrules.h  clock.cpp  clock.h  clockwidget.cpp  clockwidget.h  clockwidget.ui  customdifficultydialog.ui  difficultydialog.cpp  difficultydialog.h  engineconfigdialog.cpp  engineconfigdialog.h  engineconfigdialog.ui  enginesettings.cpp  enginesettings.h  enginesettings.ui  externalcontrol.cpp  externalcontrol.h  gamedialog.cpp  gamedialog.h  gamedialog.ui  gamemanager.cpp  gamemanager.h  historywidget.cpp  historywidget.h  historywidget.ui  kchess.knsrc  knights.cpp  knights.desktop  knights.h  knights.kcfg  knights.knsrc  knights.qrc  knightsui.rc  knightsview.cpp  knightsview.h  (+13 more)
src/core/: item.cpp  item.h  move.cpp  move.h  piece.cpp  piece.h  pos.cpp  pos.h  renderer.cpp  renderer.h
src/proto/: chatwidget.cpp  chatwidget.h  chatwidget.ui  computerprotocol.cpp  computerprotocol.h  ficsconsole.cpp  ficsconsole.h  ficsdialog.cpp  ficsdialog.h  ficsdialog.ui  ficsgamedialog.cpp  ficsgamedialog.h  ficsprotocol.cpp  ficsprotocol.h  keyboardeventfilter.cpp  keyboardeventfilter.h  localprotocol.cpp  localprotocol.h  protocol.cpp  protocol.h  seekgraph.cpp  seekgraph.h  seekgraphscene.cpp  seekgraphscene.h  textprotocol.cpp  textprotocol.h  uciprotocol.cpp  uciprotocol.h  xboardproto.cpp  xboardproto.h  xboardprotocol.cpp  xboardprotocol.h
src/rules/: chessrules.cpp  chessrules.h  rules.h
themes/: CMakeLists.txt  default.desktop  east_west.desktop  east_west.svgz  fantasy.desktop  gray.desktop  gray.svgz  knights.desktop  knights.svgz  plain.desktop  plain.svgz  tux.desktop  xboard1.desktop  xboard2.desktop  xboard2.svgz
