install(FILES knights.desktop knights.svg knights.png DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
install(FILES plain.desktop plain.svg plain.png DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
install(FILES gray.desktop gray.svg DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
install(FILES xboard2.desktop xboard2.svg xboard2.png DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
install(FILES east_west.desktop east_west.svg east_west.png DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
