install(FILES
    knights.desktop
    knights.svg
    knights.png
    plain.desktop
    plain.svg
    plain.png
    gray.desktop
    gray.svg
    gray.png
    xboard2.desktop
    xboard2.svg
    xboard2.png
    east_west.desktop
    east_west.svg
    east_west.png
    DESTINATION ${DATA_INSTALL_DIR}/knights/themes)
